platform/external-gateway/gateway-api-gatewayclass.yaml
# https://repost.aws/articles/ARwuFtb4dlQm-6PhHYH8zezQ/implementing-kubernetes-gateway-api-using-aws-load-balancer-controller-part-ii-l7-albgatewayapi
# this is a cluster-wide object, so doesn't need a namespace defined
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: alb
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  controllerName: gateway.k8s.aws/alb
