platform/external-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
