platform/external-gateway/gateway-api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: external-alb-gw
  namespace: platform
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  gatewayClassName: alb
  infrastructure:
    parametersRef:
      kind: LoadBalancerConfiguration
      name: internet-facing-config
      group: gateway.k8s.aws
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
          namespaces:
            from: All
